cloudformation/lucee-eb-example.template
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  Lucee Elastic Beanstalk Example
  There is meant to be a minimalist example not a good production configuration.
  Add your IP as the CIDR so the resources are only visible to you and deploy to your default VPC to test.
Metadata:
    AWS::CloudFormation::Interface:
        ParameterGroups:
          - Label:
              default: Network Config
            Parameters:
              - VPCID
              - appSubnet1
              - appSubnet2
              - myIP
          - Label:
              default: Quick Start Config
            Parameters:
              - BucketName
              - KeyPrefix
        ParameterLabels:
          VPCID:
            default: VPC ID
          appSubnet1:
            default: Application Subnet 1
          appSubnet2:
            default: Application Subnet 2
          myIP:
            default: My IP CIDR
          BucketName:
            default: S3 Bucket Name
          KeyPrefix:
            default: S3 Key Prefix
Parameters:
  VPCID:
    Description: ID of the VPC
    Type: 'AWS::EC2::VPC::Id'
  appSubnet1:
    Description: 'Subnet 1: ID of first subnet to which EB instances will be deployed'
    Type: 'AWS::EC2::Subnet::Id'
  appSubnet2:
    Description: 'Subnet 2: ID of second subnet to which EB instances will be deployed'
    Type: 'AWS::EC2::Subnet::Id'
  myIP:
    Description: Google "What's my IP" and put the result along with a trailing /32 here like 100.36.200.111/32
    Type: String
  BucketName:
    AllowedPattern: ^[0-9a-zA-Z]+([0-9a-zA-Z-.]*[0-9a-zA-Z])*$
    ConstraintDescription: S3 bucket containing application binary. Name can include numbers, lowercase
      letters, uppercase letters, periods (.), and hyphens (-). It cannot start or end with a hyphen (-).
    Default: cfn-andyspohn-com
    Description: S3 bucket containing application binary. Name can include numbers, lowercase
      letters, uppercase letters, periods (.), and hyphens (-). It cannot start or end with a hyphen (-).
    Type: String
  KeyPrefix:
    AllowedPattern: ^[0-9a-zA-Z-]+(/[0-9a-zA-Z-]+)*$
    ConstraintDescription: Quick Start key prefix can include numbers, lowercase letters,
      uppercase letters, hyphens (-), and forward slash (/). It cannot start or end
      with forward slash (/) because they are automatically appended.
    Default: source-bundles
    Description: S3 key prefix for the Quick Start assets. Quick Start key prefix
      can include numbers, lowercase letters, uppercase letters, hyphens (-), and
      forward slash (/). It cannot start or end with forward slash (/) because they
      are automatically appended.
    Type: String
Resources:

  # ~~~ Elastic Beanstalk Lucee Application ~~~

  LuceeApp:
    Type: 'AWS::ElasticBeanstalk::Application'
    Properties:
      Description: Elastic Beanstalk Lucee Application
  LuceeAppVersion:
    Type: 'AWS::ElasticBeanstalk::ApplicationVersion'
    Properties:
      ApplicationName: !Ref LuceeApp
      Description: AWS ElasticBeanstalk Sample Application Version
      SourceBundle:
        S3Bucket: !Ref BucketName
        S3Key: !Sub '${KeyPrefix}/lucee-eb-example-beanstalk.zip'
  LuceeAppConfigTemplate:
    Type: 'AWS::ElasticBeanstalk::ConfigurationTemplate'
    Properties:
      ApplicationName: !Ref LuceeApp
      Description: AWS ElasticBeanstalk Sample Configuration Template
      OptionSettings:
      - Namespace: 'aws:autoscaling:asg'
        OptionName: MinSize
        Value: '1'
      - Namespace: 'aws:autoscaling:asg'
        OptionName: MaxSize
        Value: '4'
      - Namespace: 'aws:autoscaling:launchconfiguration'
        OptionName: InstanceType
        Value: t2.small
      - Namespace: 'aws:autoscaling:launchconfiguration'
        OptionName: SecurityGroups
        Value: !Ref BeanstalkInstanceSecurityGroup
      - Namespace: 'aws:elasticbeanstalk:container:tomcat:jvmoptions'
        OptionName: Xmx
        Value: 512m
      - Namespace: 'aws:elasticbeanstalk:environment'
        OptionName: EnvironmentType
        Value: LoadBalanced
      - Namespace: 'aws:ec2:vpc'
        OptionName: Subnets
        Value: !Join [',', [ !Ref appSubnet1, !Ref appSubnet2 ]]
      - Namespace: 'aws:ec2:vpc'
        OptionName: ELBSubnets
        Value: !Join [',', [ !Ref appSubnet1, !Ref appSubnet2 ]]
      - Namespace: 'aws:elasticbeanstalk:environment'
        OptionName: LoadBalancerType
        Value: application
      - Namespace: 'aws:elb:loadbalancer'
        OptionName: SecurityGroups
        Value: !Ref ELBSecurityGroup
      - Namespace: 'aws:elasticbeanstalk:environment:process:default'
        OptionName: StickinessEnabled
        Value: true
      - Namespace: 'aws:elasticbeanstalk:environment:process:default'
        OptionName: StickinessType
        Value: lb_cookie
      - Namespace: 'aws:elasticbeanstalk:environment:proxy'
        OptionName: ProxyServer
        Value: nginx
      - Namespace: 'aws:elasticbeanstalk:environment:proxy'
        OptionName: GzipCompression
        Value: true
      - Namespace: 'aws:autoscaling:launchconfiguration'
        OptionName: 'IamInstanceProfile'
        Value: !Ref InstanceProfile
      - Namespace: 'aws:elasticbeanstalk:environment'
        OptionName: 'ServiceRole'
        Value: !Ref ServiceRole
      SolutionStackName: '64bit Amazon Linux 2017.03 v2.6.1 running Tomcat 8 Java 8'
  LuceeAppEnv:
      Type: 'AWS::ElasticBeanstalk::Environment'
      Properties:
        ApplicationName: !Ref LuceeApp
        Description: AWS Elastic Beanstalk Environment running Python Sample Application
        TemplateName: !Ref LuceeAppConfigTemplate
        VersionLabel: !Ref LuceeAppVersion

  # ~~~ Elastic Beanstalk Permissions ~~~

  ServiceRole:
    Type: 'AWS::IAM::Role'
    Properties:
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/service-role/AWSElasticBeanstalkEnhancedHealth'
        - 'arn:aws:iam::aws:policy/service-role/AWSElasticBeanstalkService'
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          -
            Effect: 'Allow'
            Principal:
              Service:
                - 'elasticbeanstalk.amazonaws.com'
            Action:
              - 'sts:AssumeRole'
            Condition:
              StringEquals:
                'sts:ExternalId': 'elasticbeanstalk'
  InstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Roles:
        - !Ref InstanceRole
  InstanceRole:
    Type: 'AWS::IAM::Role'
    Properties:
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/AWSElasticBeanstalkWebTier'
        - 'arn:aws:iam::aws:policy/AWSElasticBeanstalkMulticontainerDocker'
        - 'arn:aws:iam::aws:policy/AWSElasticBeanstalkWorkerTier'
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          -
            Effect: 'Allow'
            Principal:
              Service:
                - 'ec2.amazonaws.com'
            Action:
              - 'sts:AssumeRole'

  # ~~~ Security groups to restrict access to EB instances and load balancer ~~~

  ELBSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Allows access to the load balancer
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: !Ref myIP

  BeanstalkInstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Allows access to EB instances only from the load balancer
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        SourceSecurityGroupId: !GetAtt ELBSecurityGroup.GroupId
